@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/livecd/runscript/Attic/alpha-archscript.sh,v 1.5 2004/10/15 02:40:00 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/livecd/runscript/Attic/alpha-archscript.sh,v 1.6 2004/12/12 16:39:11 wolf31o2 Exp $
 
 case $1 in
 	kernel)
@@ -62,10 +62,10 @@ case $1 in
 		# command to build the iso file
 		case ${clst_livecd_cdfstype} in
 			zisofs)
-				mkisofs -J -R -l -z -o ${2} ${clst_cdroot_path}
+				mkisofs -J -R -l -z -o ${2} ${clst_cdroot_path}  || die "Cannot make ISO image"
 			;;
 			*)
-				mkisofs -J -R -l -o ${2} ${clst_cdroot_path}
+				mkisofs -J -R -l -o ${2} ${clst_cdroot_path} || die "Cannot make ISO image"
 			;;
 		esac
 		isomarkboot ${2} /boot/bootlx
