@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/livecd/runscript/Attic/hppa-archscript.sh,v 1.5 2004/10/15 02:40:00 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/livecd/runscript/Attic/hppa-archscript.sh,v 1.6 2004/12/12 16:39:11 wolf31o2 Exp $
 
 case $1 in
 	kernel)
@@ -74,7 +74,7 @@ case $1 in
 
 	iso)
 		#this is for the livecd-stage2 target, and calls the proper command to build the iso file
-		mkisofs -J -R -l -o  ${2} ${clst_cdroot_path}
+		mkisofs -J -R -l -o  ${2} ${clst_cdroot_path}  || die "Cannot make ISO image"
 		palo -f boot/palo.conf -C ${2}
 	;;
 esac
