@@ -1,6 +1,14 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.120 2004/12/12 16:32:06 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.121 2004/12/12 16:39:11 wolf31o2 Exp $
+
+  12 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org>
+  livecd/runscript/alpha-archscript.sh, livecd/runscript/hppa-archscript.sh,
+  livecd/runscript/sparc-archscript.sh,
+  livecd/runscript/sparc64-archscript.sh,
+  livecd/runscript/x86-archscript.sh:
+  Added failures to all arches on mkisofs failure and also made -z option to
+  mkisofs optional on x86 depending on loop type used.
 
   12 Dec 2004; Chris Gianelloni <wolf31o2@gentoo.org>
   livecd/runscript/x86-archscript.sh:
